--- a/city-cycle/index.html
+++ b/city-cycle/index.html
@@ -17,6 +17,12 @@
 <body>
     <h1>Bienvenue sur le projet City Cycle</h1>
     <p>City Cycle est une application de location de vélos en libre-service.</p>
+    <h2>Projet : City Cycle</h2>
+<p>City Cycle est une application de location de vélos en libre-service.</p>
+<p>
+    <a href="city-cycle/index.html" target="_blank">Voir le projet City Cycle</a>
+</p>
+
 </body>
 </html>
 Ajout du projet City Cycle
